unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Actuals_Cutoff_Day__c.field-meta.xml
<CustomField>
    <fullName>pse__Actuals_Cutoff_Day__c</fullName>
    <description>The day of the week that serves as the cutoff day when using the Use Mid Month Forecast Calculations setting. Forecasting excludes scheduled hours that fall on or before the cutoff day.</description>
    <inlineHelpText>The day of the week that serves as the cutoff day when using the Use Mid Month Forecast Calculations setting. Forecasting excludes scheduled hours that fall on or before the cutoff day..</inlineHelpText>
    <label>Actuals Cutoff Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>