unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Custom_Date_For_Deliverable_Milestones__c.field-meta.xml
<CustomField>
    <fullName>pse__Custom_Date_For_Deliverable_Milestones__c</fullName>
    <description>API name of the custom field on the Milestone object that is used to determine the monthly time period any Deliverable milestones are added to. This enables you to control the month in which revenue or costs are placed.</description>
    <inlineHelpText>API name of the custom field on the Milestone object that is used to determine the monthly time period any Deliverable milestones are added to. This enables you to control the month in which revenue or costs are placed.</inlineHelpText>
    <label>Custom Date for Deliverable Milestones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>